tests/lean/auxDeclIssue.lean.expected.out
auxDeclIssue.lean:5:3: error: tactic 'assumption' failed, 
⊢ False
auxDeclIssue.lean:11:2: error: tactic 'subst' failed, did not find equation for eliminating 'x'
x y : Nat
⊢ x = y
auxDeclIssue.lean:18:3: error: tactic 'assumption' failed, 
ex1 : False
⊢ False
